--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json"
   },
   "devDependencies": {
-    "@lucide/svelte": "^0.562.0",
+    "@internationalized/date": "^3.10.1",
+    "@lucide/svelte": "^0.561.0",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@tsconfig/svelte": "^5.0.6",
     "@types/node": "^24.10.1",
+    "bits-ui": "^2.15.4",
     "clsx": "^2.1.1",
     "svelte": "^5.43.8",
     "svelte-check": "^4.3.4",
