--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,7 +20,9 @@
     "baseUrl": ".",
         "paths": {
       "$lib": ["./src/lib"],
-      "$lib/*": ["./src/lib/*"]
+      "$lib/*": ["./src/lib/*"],
+            "$src": ["./src"],
+      "$src/*": ["./src/*"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.js", "src/**/*.svelte"]
