--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "tailwind-variants": "^3.2.2",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
+    "vaul-svelte": "^1.0.0-next.7",
     "vite": "^7.2.4"
   },
   "dependencies": {
