--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "@turf/turf": "^7.3.2",
     "@types/geojson": "^7946.0.16",
     "mapbox-gl": "^3.18.0",
     "tailwindcss": "^4.1.18"
