--- a/public/catalog_projects.json
+++ b/public/catalog_projects.json
@@ -1,1 +1,1 @@
-["Transport", "Rail", "Port", "Energy", "Telecommunication", "Airport"]
+["Transport", "Rail", "Port", "Energy", "Telecommunication", "Airport", "Other"]
